Update Titanic Classification - Task - 2.ipynb

--- a/Titanic Classification - Task - 2.ipynb
+++ b/Titanic Classification - Task - 2.ipynb
@@ -3588,7 +3588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The __Random Forest classifier__ goes on top of the Machine Learning models, followed by **Decision Tree** and __KNN__ respectfully. Now we need to check how the Random Forest performs by using cross validation."
+    "The __Random Forest classifier__ goes on top of the Machine Learning models, followed by **Decision Tree** and __KNN__ respectfully."
    ]
   },
   {
